--- a/Mohamad/Mohamad.csproj
+++ b/Mohamad/Mohamad.csproj
@@ -84,6 +84,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddFranchise.json.cs">
+      <DependentUpon>AddFranchise.json</DependentUpon>
+    </Compile>
     <Compile Include="CorpDetails.json.cs">
       <DependentUpon>CorpDetails.json</DependentUpon>
     </Compile>
@@ -103,10 +106,16 @@
     <TypedJSON Include="CorpDetails.json">
       <Generator>MsBuild:Compile</Generator>
     </TypedJSON>
+    <TypedJSON Include="AddFranchise.json">
+      <Generator>MsBuild:Compile</Generator>
+    </TypedJSON>
     <None Include="wwwroot\Mohamad\CorpJson.html" />
   </ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\Mohamad\CorpDetails.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="wwwroot\Mohamad\AddFranchise.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
