--- a/Mohamad/Mohamad.csproj
+++ b/Mohamad/Mohamad.csproj
@@ -90,6 +90,9 @@
     <Compile Include="CorpJson.json.cs">
       <DependentUpon>CorpJson.json</DependentUpon>
     </Compile>
+    <Compile Include="FranchiseDetails.json.cs">
+      <DependentUpon>FranchiseDetails.json</DependentUpon>
+    </Compile>
     <Compile Include="Model\Corporation.cs" />
     <Compile Include="Model\Franchise.cs" />
     <Compile Include="Model\Transaction.cs" />
@@ -103,10 +106,16 @@
     <TypedJSON Include="CorpDetails.json">
       <Generator>MsBuild:Compile</Generator>
     </TypedJSON>
+    <TypedJSON Include="FranchiseDetails.json">
+      <Generator>MsBuild:Compile</Generator>
+    </TypedJSON>
     <None Include="wwwroot\Mohamad\CorpJson.html" />
   </ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\Mohamad\CorpDetails.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="wwwroot\Mohamad\FranchiseDetails.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(StarcounterBin)\Starcounter.MsBuild.targets" />
